fix: getInventoriesByWarehouse() 반환 스트림 종단 연산을 toList() → collect(Collectors.toList())로 변경